Resolves: tdf#120175 normalize theme names to our naming scheme

So breeze-dark turns into breeze_dark

Change-Id: Id5d06f73a79f099048b31fd16f9f9611236af392