vcl/source/app/IconThemeSelector.cxx
@@ -130,7 +130,9 @@ IconThemeSelector::SetUseHighContrastTheme(bool v)
 void
 IconThemeSelector::SetPreferredIconTheme(const OUString& theme, bool bDarkIconTheme)
 {
-    mPreferredIconTheme = theme;
+    // lower case theme name, and (tdf#120175) replace - with _
+    // see icon-themes/README
+    mPreferredIconTheme = theme.toAsciiLowerCase().replace('-','_');
     mPreferDarkIconTheme = bDarkIconTheme;
 }
 
